[2/2] Settings: allow disable of screenshot shutter sound
Change-Id: Ie69f44a3b7db3bf3c9a5c098bca43568e1099283

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -108,4 +108,7 @@
     <string name="security_settings_fingerprint_enroll_find_sensor_message_left" product="tablet">Suchen Sie den Fingerabdrucksensor auf der linken Seite Ihres Tablets.</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_message_right" product="tablet">Suchen Sie den Fingerabdrucksensor auf der rechten Seite Ihres Tablets.</string>
 
+    <!-- Screenshot shutter -->
+    <string name="screenshot_shutter_sound_title">Bildschirmfoto-Ton</string>
+
 </resources>
