--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -111,4 +111,8 @@
     <!-- Screenshot shutter -->
     <string name="screenshot_shutter_sound_title">Bildschirmfoto-Ton</string>
 
+    <!-- Battery stats reset -->
+    <string name="battery_stats_reset">Statistik zurücksetzen</string>
+    <string name="battery_stats_message">Die Historie zum letzten Ladevorgang wird zurückgesetzt</string>
+
 </resources>
