--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -189,4 +189,7 @@
     <string name="unlock_quick_unlock_control_title">Schnelles Entsperren</string>
     <string name="unlock_quick_unlock_control_summary">Die Sperre wird automatisch aufgehoben, wenn PIN/Passwort richtig eingegeben wurde</string>
 
+    <!-- Running services -->
+    <string name="background_processes_settings_title">Hintergrundprozesse</string>
+
 </resources>
