--- a/res/values/derp_strings.xml
+++ b/res/values/derp_strings.xml
@@ -298,4 +298,10 @@
     <string name="darker_theme_enable_title">Pure black</string>
     <string name="darker_theme_enable_summary">Pure black background for dark theme</string>
 
+    <!-- Torch Power button gestures -->
+    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
+    <string name="torch_power_button_gesture_none">Disabled</string>
+    <string name="torch_power_button_gesture_dt">Double tap power button (slower single tap response), Disables double power tap for camera.</string>
+    <string name="torch_power_button_gesture_lp">Long press power button</string>
+
 </resources>
