--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -115,4 +115,8 @@
     <string name="battery_stats_reset">Nutzungsdaten löschen?</string>
     <string name="battery_stats_message">Daten zur Akkunutzung gehen verloren</string>
 
+    <!-- Double Tap to Sleep Statusbar -->
+    <string name="double_tap_sleep_gesture_title">Statusleiste doppeltippen für Ruhemodus</string>
+    <string name="double_tap_sleep_gesture_summary">Die Statusleiste zweimal antippen, um das Gerät in den Ruhemodus zu versetzen</string>
+
 </resources>
