--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -66,4 +66,8 @@
     <string name="notification_sound_vib_screen_on_title">Benachrichtigungston bei bei eingeschaltetem Bildschirm</string>
     <string name="notification_sound_vib_screen_on_summary">Töne und Vibrationen für Benachrichtigungen abspielen, wenn der Bildschirm eingeschaltet ist</string>
 
+    <!-- Less boring heads up -->
+    <string name="less_boring_heads_up_title">Weniger Störungen durch Pop-up-Benachrichtigungen</string>
+    <string name="less_boring_heads_up_summary">Pop-up-Benachrichtigungen nur für Telefon oder Messenger-Apps anzeigen, wenn diese nicht im Vordergrund sind</string>
+
 </resources>
