Settings: add option to enable AOD on charging only [2/2]
* @jhonboy121: return availability status based on AmbientDisplayConfiguration just like AOD preference controller does

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: Id509df62e7a4da398a0ac284c3e0e7c20b6ff50a

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -263,4 +263,8 @@
     <string name="torch_power_button_gesture_dt">Zum Einschalten der Taschenlampe Ein-/Aus-Taste doppelt drücken (kleine Verzögerung zum einfachem Tippen)</string>
     <string name="torch_power_button_gesture_lp">Ein-/Aus-Taste lange drücken zum Anschalten der Taschenlampe</string>
 
+    <!-- Doze on charge -->
+    <string name="doze_on_charge_title">AOD beim Laden</string>
+    <string name="doze_on_charge_summary">Während des Ladevorgangs wird der Ruhebildschirm ständig angezeigt</string>
+
 </resources>
