Settings: Add vibration patterns from OOS [3/3]
a rewrite of: https://github.com/AOSPA/android_packages_apps_Settings/commit/c4560cafae3f97f09c372c5289869b35c90d3b71

Change-Id: I4cf5b5a22e35f0162e7a329139eea96bf2ef5350

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -36,4 +36,7 @@
     <!-- Volume link notification -->
     <string name="volume_link_notification_title">Klingelton- und Benachrichtigungslautstärke verknüpfen</string>
 
+    <!-- Vibration patterns -->
+    <string name="vibration_pattern_title">Klingelton-Vibrationsmuster</string>
+
 </resources>
