Settings: Optional haptic feedback on back gesture [1/2]
Change-Id: I3bb3e1cd14b8509cb3bbe7daf8725c3a344e355c
Signed-off-by: DennySPb <dennyspb@gmail.com>

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -192,4 +192,8 @@
     <!-- Running services -->
     <string name="background_processes_settings_title">Hintergrundprozesse</string>
 
+    <!-- Misc gesture settings -->
+    <string name="back_gesture_haptic_title">Haptisches Feedback</string>
+    <string name="back_gesture_haptic_summary">Aktivieren Sie den haptischen Tick-Effekt bei der Zurück-Geste</string>
+
 </resources>
