Settings: Add preference for KEY_MIN_REFRESH_RATE
Change-Id: Iac1f65ab09717ea55a5b471e094385c77ba894ee

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -41,4 +41,7 @@
     <string name="pattern_custom">Benutzerdefiniert</string>
     <string name="custom_vibration_pattern_title">Benutzerdefiniertes Muster</string>
 
+    <!-- Min refresh rate -->
+    <string name="min_refresh_rate_title">Minimale Aktualisierungsrate</string>
+
 </resources>
