--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -112,7 +112,7 @@
     <string name="screenshot_shutter_sound_title">Bildschirmfoto-Ton</string>
 
     <!-- Battery stats reset -->
-    <string name="battery_stats_reset">Statistik zurücksetzen</string>
-    <string name="battery_stats_message">Die Historie zum letzten Ladevorgang wird zurückgesetzt</string>
+    <string name="battery_stats_reset">Nutzungsdaten löschen?</string>
+    <string name="battery_stats_message">Daten zur Akkunutzung gehen verloren</string>
 
 </resources>
