--- a/res/values/derp_strings.xml
+++ b/res/values/derp_strings.xml
@@ -141,7 +141,8 @@
     <string name="screenshot_shutter_sound_summary">Enable screenshot sound and vibration</string>
 
     <!-- Battery stats reset -->
-    <string name="battery_stats_reset">Reset stats</string>
-    <string name="battery_stats_message">Battery history stats are going to be reset</string>
+    <string name="battery_stats_reset">Clear usage data?</string>
+    <string name="battery_stats_message">Battery usage data will be lost</string>
+    <string name="battery_stats_clear">@string/proxy_clear_text</string>
 
 </resources>
