Settings: Double tap to trigger doze [2/2]
* Also adapt Add video to Double tap to trigger doze from Pie

Change-Id: Id98543542db937c6cc1f176cd55f6b02e472849d

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -275,4 +275,9 @@
     <string name="default_font">Google Sans (Standard)</string>
     <string name="default_icon_pack">AOSP + Oxygen (Standard)</string>
 
+    <!-- Doze on double tap -->
+    <string name="double_tap_title">Doppeltippen</string>
+    <string name="doze_double_tap_title">Doppeltippen, um das Telefon zu überprüfen</string>
+    <string name="doze_double_tap_summary">Pulsbenachrichtigungen durch Doppeltippen</string>
+
 </resources>
