--- a/res/values/derp_strings.xml
+++ b/res/values/derp_strings.xml
@@ -317,4 +317,9 @@
     <string name="default_font">Google Sans (default)</string>
     <string name="default_icon_pack">AOSP + Oxygen (default)</string>
 
+    <!-- Doze on double tap -->
+    <string name="double_tap_title">Double tap</string>
+    <string name="doze_double_tap_title">Double tap to check phone</string>
+    <string name="doze_double_tap_summary">Pulse notifications by a double tap</string>
+
 </resources>
