Settings: Show full default name in customization preferences
Change-Id: I5ad9beea80c042d33ffcd56e2daf6996ce03f993

--- a/res/values/derp_strings.xml
+++ b/res/values/derp_strings.xml
@@ -314,4 +314,7 @@
     <string name="custom_light_off_time_title">Light OFF time during led pulse (ms)</string>
     <string name="value_equals_default">def</string>
 
+    <string name="default_font">Google Sans (default)</string>
+    <string name="default_icon_pack">AOSP + Oxygen (default)</string>
+
 </resources>
