--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -272,4 +272,7 @@
     <string name="custom_light_on_time_title">Leuchtdauer während des LED-Impulses (ms)</string>
     <string name="custom_light_off_time_title">Intervall zwischen zwei LED-Impulsen (ms)</string>
 
+    <string name="default_font">Google Sans (Standard)</string>
+    <string name="default_icon_pack">AOSP + Oxygen (Standard)</string>
+
 </resources>
