--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -44,4 +44,7 @@
     <!-- Min refresh rate -->
     <string name="min_refresh_rate_title">Minimale Aktualisierungsrate</string>
 
+    <!-- Max refresh rate -->
+    <string name="max_refresh_rate_title">Maximale Aktualisierungsrate</string>
+
 </resources>
