Settings: allow changing the length of gesture navbar [2/2]
* forward ported from 11, but incorporated fullscreen gesture settings as a dependency so that this preference will be disabled when pill is hidden.

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Change-Id: I72973cb8972e31286909625a76f01481627403db

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -244,4 +244,8 @@
     <string name="fullscreen_gestures_title">Navbar-Pille ausblenden</string>
     <string name="fullscreen_gestures_summary">Navbar-Pille und Tastaturbereich ausblenden</string>
 
+    <string name="gesture_navbar_length_title">Länge der Navbar-Pille</string>
+    <string name="short_label">Kurz</string>
+    <string name="long_label">Lang</string>
+
 </resources>
