Settings: support black theme for dark mode [2/3]
Change-Id: I12451c0b72f73b08b885e8103bbe3e74a0c4e19f
Signed-off-by: Jesse Chan <jc@lineageos.org>

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -253,4 +253,8 @@
     <string name="lockpattern_settings_enable_error_path_title">Sperrmuster-Fehler anzeigen</string>
     <string name="lockpattern_settings_enable_dots_title">Sperrmuster-Punkte anzeigen</string>
 
+    <!-- Black theme for dark mode -->
+    <string name="berry_black_theme_title">Reines Schwarz</string>
+    <string name="berry_black_theme_summary">Rein schwarzer Hintergrund für dunkles Design</string>
+
 </resources>
