--- a/res/values/derp_strings.xml
+++ b/res/values/derp_strings.xml
@@ -294,4 +294,8 @@
     <!-- Whether the dots will be drawn when using the lockscreen pattern -->
     <string name="lockpattern_settings_enable_dots_title">Show pattern dots</string>
 
+    <!-- Black theme for dark mode -->
+    <string name="darker_theme_enable_title">Pure black</string>
+    <string name="darker_theme_enable_summary">Pure black background for dark theme</string>
+
 </resources>
