Settings: allow hiding navbar [3/3]
* simplified some existing code while at it

Signed-off-by: jhonboy121 <alfredmathew05@gmail.c
Change-Id: Id7a834cc7fee183b2d396b8d4fd2b8272daf39e4

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -240,4 +240,8 @@
     <string name="back_swipe_extended_title">Erweiterte Wischgeste</string>
     <string name="back_swipe_extended_summary">Aktion auslösen bei langem Wischen (mehr als die Hälfte des Bildschirms) oder einem L-Wischen (lange vertikal)</string>
 
+    <!-- Fullscreen gestures -->
+    <string name="fullscreen_gestures_title">Navbar-Pille ausblenden</string>
+    <string name="fullscreen_gestures_summary">Navbar-Pille und Tastaturbereich ausblenden</string>
+
 </resources>
