Settings: Show full default name for wifi and signal icon customization preferences
Change-Id: Id46e2f57df104447ef4e26854d909b6f8d0e0746
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/values-de/derp_strings.xml
+++ b/res/values-de/derp_strings.xml
@@ -274,6 +274,8 @@
 
     <string name="default_font">Google Sans (Standard)</string>
     <string name="default_icon_pack">AOSP + Oxygen (Standard)</string>
+    <string name="default_signal_icon">AOSP (Standard)</string>
+    <string name="default_wifi_icon">AOSP (Standard)</string>
 
     <!-- Doze on double tap -->
     <string name="double_tap_title">Doppeltippen</string>
