Settings: Make dashboard icons monetable [1/2]
Change-Id: I9e812bf3f13dcdf40650c23dee3d5f33ad8fc80e
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/drawable/ic_settings_emergency.xml
+++ b/res/drawable/ic_settings_emergency.xml
@@ -20,5 +20,5 @@
         android:viewportHeight="24.0">
     <path
         android:pathData="M9.321,2V7.359L4.68,4.68L2,9.321L6.641,12L2,14.679L4.68,19.32L9.321,16.641V22H14.68V16.641L19.321,19.32L22,14.679L17.359,12L22,9.321L19.321,4.68L14.68,7.359V2H9.321Z"
-        android:fillColor="?android:attr/colorPrimary"/>
+        android:fillColor="?android:attr/colorAccent"/>
 </vector>
